--- a/addSubtractProgram/addsubtract.html
+++ b/addSubtractProgram/addsubtract.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head>
-
+    <head lang="en">
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="stylesheet.css">
+        <title>Add-Subtract Program</title>
+        <script src="script.js" defer></script>
     </head>
     <body>
-        
+
     </body>    
 </html>
