some edits on the html text

--- a/addSubtractProgram/addsubtract.html
+++ b/addSubtractProgram/addsubtract.html
@@ -3,10 +3,31 @@
     <head lang="en">
         <meta charset="utf-8">
         <link rel="stylesheet" href="stylesheet.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
         <title>Add-Subtract Program</title>
         <script src="script.js" defer></script>
     </head>
     <body>
-
+        <header>
+            Hello World! I'm Jebong
+        </header>
+        <h1>
+            This is a simple program I made to practice my HTML, CSS and Javascript skills.
+        </h1>   
+        <p>
+            This is a simple add and subtract program which functions as follows:
+            <ul>
+                <li>The output box displays a number which will change based on your desired function. It will initally start at "0".</li>
+                <li>The "+" sign when pressed will add 1 to the number reflected on the output box.</li>
+                <li>The "-" sign when pressed will subtract 1 to the number reflected on the output box.</li>
+            </ul>
+        </p>
+        <div class="container">
+            <div class="input">+</div>
+            <div class="output">Output box</div>
+            <div class="input">-</div>
+        </div>
     </body>    
 </html>
