wrote script for counter program

--- a/addSubtractProgram/addsubtract.html
+++ b/addSubtractProgram/addsubtract.html
@@ -17,17 +17,17 @@
             This is a simple program I made to practice my HTML, CSS and Javascript skills.
         </h1>   
         <p>
-            This is a simple add and subtract program which functions as follows:
+            This is a simple counter program which functions as follows:
             <ul>
-                <li>The output box displays a number which will change based on your desired function. It will initally start at "0".</li>
+                <li>The output displays a number which will change based on your desired function. It will initally start at "0".</li>
                 <li>The "+" sign when pressed will add 1 to the number reflected on the output box.</li>
                 <li>The "-" sign when pressed will subtract 1 to the number reflected on the output box.</li>
             </ul>
         </p>
         <div class="container">
-            <div class="input">+</div>
-            <div class="output">Output box</div>
-            <div class="input">-</div>
+            <button type="button" class="counter-plus"> + </button>
+            <div class="counter-display">(..)</div>
+            <button class="counter-minus"> - </button>
         </div>
     </body>    
 </html>
